--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 
    @author Sebastian Thomschke, Vegard IT GmbH
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
 
@@ -49,6 +50,7 @@
 
       <java.version>1.8</java.version>
       <java.vendor>default</java.vendor>
+      <eclipse-java-compiler.version>3.17.0</eclipse-java-compiler.version>
 
       <java.version.unit-tests>${java.version}</java.version.unit-tests>
       <java.vendor.unit-tests>${java.vendor}</java.vendor.unit-tests>
@@ -189,7 +191,7 @@
          /*
           * loading/locating eclipse Java compiler artifact
           */
-         def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt", "ecj", "3.15.0", "jar", null)
+         def ecjArtifactMeta = artifactFactory.createArtifactWithClassifier("org.eclipse.jdt", "ecj", project.properties["eclipse-java-compiler.version"], "jar", null)
          def ecjArtifact = artifactResolver.resolve(new org.apache.maven.artifact.resolver.ArtifactResolutionRequest()
             .setArtifact(ecjArtifactMeta)
             .setLocalRepository(session.localRepository)
@@ -317,7 +319,7 @@
 
 
    <distributionManagement>
-      <downloadUrl>https://jcenter.bintray.com/</downloadUrl>
+      <downloadUrl>https://repo.maven.apache.org/</downloadUrl>
       <repository>
          <id>bintray-release-uploads</id>
          <url>https://api.bintray.com/maven/vegardit/maven-public/${project.artifactId}/;publish=1</url>
@@ -1953,6 +1955,19 @@
                                  </pluginExecutionFilter>
                                  <action>
                                     <ignore />
+                                 </action>
+                              </pluginExecution>
+                              <pluginExecution>
+                                 <pluginExecutionFilter>
+                                    <groupId>org.apache.maven.plugins</groupId>
+                                    <artifactId>maven-checkstyle-plugin</artifactId>
+                                    <versionRange>[0.0,)</versionRange>
+                                    <goals>
+                                       <goal>check</goal>
+                                    </goals>
+                                 </pluginExecutionFilter>
+                                 <action>
+                                    <ignore></ignore>
                                  </action>
                               </pluginExecution>
                            </pluginExecutions>
