--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
 
    @author Sebastian Thomschke, Vegard IT GmbH
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>com.vegardit.maven</groupId>
    <artifactId>vegardit-maven-parent</artifactId>
-   <version>2.2.3-SNAPSHOT</version>
+   <version>2.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
 
@@ -61,7 +62,7 @@
       <!-- requiring 3.3.0+ because of https://issues.apache.org/jira/browse/MNG-5755 -->
       <!-- requiring 3.3.9+ because of org.jacoco:jacoco-maven-plugin -->
       <!-- requiring 3.5+ because of maven-enforcer-plugin/org.apache.felix:maven-bundle-plugin -->
-      <maven.minimum.version>3.5</maven.minimum.version>
+      <maven.minimum.version>3.5.0</maven.minimum.version>
 
       <maven.scm.version>1.11.2</maven.scm.version>
       <maven.scm.svnjava.version>2.1.2</maven.scm.svnjava.version>
@@ -78,6 +79,7 @@
       <buildtime.output.log>true</buildtime.output.log>
 
       <checkstyle.version>8.20</checkstyle.version>
+      <checkstyle.sevntu-plugin.version>1.33.0</checkstyle.sevntu-plugin.version>
       <checkstyle.violation-severity>warning</checkstyle.violation-severity>
 
       <maven-bundle-plugin.niceManifest>true</maven-bundle-plugin.niceManifest>
@@ -929,7 +931,7 @@
             <version>3.0.0</version>
             <executions>
                <execution>
-                  <id>check@package</id>
+                  <id>check@process-sources</id>
                   <!-- cannot use phase validate as it needs to be executed after gmavenplus-plugin -->
                   <phase>process-sources</phase>
                   <goals>
@@ -950,6 +952,11 @@
                   <groupId>com.puppycrawl.tools</groupId>
                   <artifactId>checkstyle</artifactId>
                   <version>${checkstyle.version}</version>
+               </dependency>
+               <dependency>
+                  <groupId>com.github.sevntu-checkstyle</groupId>
+                  <artifactId>sevntu-checkstyle-maven-plugin</artifactId>
+                  <version>${checkstyle.sevntu-plugin.version}</version>
                </dependency>
             </dependencies>
          </plugin>
