--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
       <!-- enables https://github.com/timgifford/maven-buildtime-extension -->
       <buildtime.output.log>true</buildtime.output.log>
 
+      <!-- TODO cannot upgrade checkstyle version until https://github.com/sevntu-checkstyle/sevntu.checkstyle/issues/745 is resolved -->
       <checkstyle.version>8.20</checkstyle.version>
       <checkstyle.sevntu-plugin.version>1.35.0</checkstyle.sevntu-plugin.version>
       <checkstyle.violation-severity>warning</checkstyle.violation-severity>
@@ -411,7 +412,7 @@
          -->
          <plugin>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.1.1</version> <!--$NO-MVN-MAN-VER$-->
+            <version>3.1.1</version>
             <executions>
                <execution>
                   <!-- Add maven project properties containing the path to artifact in the local repo for all dependencies to see https://maven.apache.org/plugins/maven-dependency-plugin/properties-mojo.html -->
@@ -485,7 +486,7 @@
                <dependency>
                   <groupId>org.codehaus.groovy</groupId>
                   <artifactId>groovy-all</artifactId>
-                  <version>2.5.6</version>
+                  <version>2.5.8</version>
                   <type>pom</type>
                </dependency>
                <dependency>
