--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 
 language: java
   
@@ -29,4 +29,4 @@ before_script:
   - unset _JAVA_OPTIONS # https://github.com/travis-ci/travis-ci/issues/8408
 
 script:
-  - bash .travis/build.sh
+  - bash .ci/build.sh
