--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,8 @@
 
       <java.version>1.8</java.version>
       <java.vendor>default</java.vendor>
-      <eclipse-java-compiler.version>3.18.0</eclipse-java-compiler.version>
+      <!-- https://search.maven.org/search?q=g:org.eclipse.jdt%20a:ecj -->
+      <eclipse-java-compiler.version>3.19.0</eclipse-java-compiler.version>
 
       <java.version.unit-tests>${java.version}</java.version.unit-tests>
       <java.vendor.unit-tests>${java.vendor}</java.vendor.unit-tests>
@@ -698,7 +699,7 @@
                         <argument>-parameters</argument> <!-- generate method parameters attribute -->
                         <!-- enabling this option breaks
                            1) maven-bundle-plugin with "java.lang.IllegalArgumentException: invalid signature: *"
-                           2) javac/javadoc with "undeclared type variable: K" when referencing classes with generics of other artifacts compiled with EJC
+                           2) javac/javadoc with "undeclared type variable: K" when referencing classes with generics of other artifacts compiled with ECJ
                         <argument>-genericsignature</argument> generate generic signature for lambda expressions -->
                         <argument>-time</argument> <!-- display speed information. -->
                         <argument>-showversion</argument> <!-- display the build number of the compiler -->
